--- a/package.json
+++ b/package.json
@@ -4,16 +4,18 @@
   "license": "MIT",
   "scripts": {
     "ng": "ng",
-    "start": "ng serve",
+    "start": "node server.js",
     "build": "ng build",
     "test": "ng test",
     "lint": "ng lint",
-    "e2e": "ng e2e"
+    "e2e": "ng e2e",
+    "postinstall": "ng build --aot -prod"
   },
   "private": true,
   "dependencies": {
     "@angular/animations": "^4.3.5",
     "@angular/cdk": "^2.0.0-beta.8",
+    "@angular/cli": "1.3.0",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
     "@angular/core": "^4.2.4",
@@ -25,13 +27,13 @@
     "@angular/router": "^4.2.4",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
+    "express": "^4.15.4",
     "hammerjs": "^2.0.8",
     "rxjs": "^5.4.2",
     "web-animations-js": "^2.3.1",
     "zone.js": "^0.8.14"
   },
   "devDependencies": {
-    "@angular/cli": "1.3.0",
     "@angular/compiler-cli": "^4.2.4",
     "@angular/language-service": "^4.2.4",
     "@types/jasmine": "~2.5.53",
@@ -50,5 +52,9 @@
     "ts-node": "~3.2.0",
     "tslint": "~5.3.2",
     "typescript": "~2.3.3"
+  },
+  "engines": {
+    "node": "8.4.0",
+    "npm": "5.3.0"
   }
 }
