--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "@angular/animations": "^4.3.5",
     "@angular/cdk": "^2.0.0-beta.8",
     "@angular/cli": "1.3.0",
-    "@angular/compiler-cli": "^4.2.4",
     "@angular/common": "^4.2.4",
     "@angular/compiler": "^4.2.4",
+    "@angular/compiler-cli": "^4.2.4",
     "@angular/core": "^4.2.4",
     "@angular/forms": "^4.2.4",
     "@angular/http": "^4.2.4",
@@ -26,6 +26,7 @@
     "@angular/platform-browser": "^4.2.4",
     "@angular/platform-browser-dynamic": "^4.2.4",
     "@angular/router": "^4.2.4",
+    "angular": "^1.6.9",
     "bootstrap": "^4.0.0-beta",
     "core-js": "^2.4.1",
     "express": "^4.15.4",
@@ -56,5 +57,16 @@
   "engines": {
     "node": "8.4.0",
     "npm": "5.3.0"
-  }
+  },
+  "description": "This project was generated with [Angular CLI](https://github.com/angular/angular-cli) version 1.3.0.",
+  "main": "karma.conf.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/workforce-data-initiative/skill-labeller-ui.git"
+  },
+  "author": "",
+  "bugs": {
+    "url": "https://github.com/workforce-data-initiative/skill-labeller-ui/issues"
+  },
+  "homepage": "https://github.com/workforce-data-initiative/skill-labeller-ui#readme"
 }
